[package]
name = "yum_mocha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.2", features = ["linked", "debug"] }
ash-window = "0.12.0"
winit = "0.28.6"
raw-window-handle = "0.5.2"
bytemuck = "1.13.1"
libc = "0.2.144"
num-traits = "0.2.15"
drowsed_math = { path="../drowsed_math/" }
fbxcel-dom = "0.0.10"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

 
[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation", 
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse"
]

[profile.dev]
#opt-level = 1 

[profile.release]
opt-level = 3

# [build]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]